packages/app/src/components/views/style.less
.ant-drawer-body {
  padding-bottom: 50px;
  .form-button-group {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    padding: 10px 16px;
    border-top: 1px solid #f0f0f0;
    background-color: #fff;
  }
}
.ant-drawer-footer {
  text-align: right;
}
.ant-descriptions-view
  .ant-descriptions-item-container
  .ant-descriptions-item-label {
  align-items: center;
}
.page-tabs {
  .ant-tabs {
    margin: -24px -24px 8px;
    position: relative;
    // position: relative;
    // // border-bottom: 1px solid #f0f0f0;
    // padding: 0 24px;
    // &::after {
    //   position: absolute;
    //   right: -24px;
    //   left: -24px;
    //   border-bottom: 1px solid #f0f0f0;
    //   content: '';
    //   bottom: 16px;
    //   z-index: 11;
    // }
    .ant-tabs-nav {
      &::before {
        right: -24px;
        left: -24px;
      }
      .ant-tabs-tab {
        margin: 0 0 0 24px;
      }
      // margin-bottom: -1px;
    }
  }
}

.markdown-content {
  *:last-child {
    margin-bottom: 0;
  }
}

.details-page {
  background: #f0f2f5;
  position: fixed;
  top: 48px;
  left: 200px;
  width: calc(100% - 200px);
  height: calc(100% - 48px);
  overflow: auto;
  transition: all 0.2s;
}

body.collapsed {
  .details-page {
    left: 0;
    width: 100%;
  }
}

@media only screen and (max-width: 800px) {
  .details-page {
    left: 0;
    width: 100%;
  }
}

.users-form {
  max-width: 368px;
  margin: 0 auto;
  padding-top: 100px;
  padding: 100px 12px 12px;
}

.ant-form-item-with-help {
  margin-bottom: 24px;
}

.users-form {
  .button-group {
    justify-content: flex-start;
    .ant-row {
      width: 100%;
    }
    .ant-col.inline {
      width: 100%;
    }
  }
}

.ant-radio-wrapper {
  p {
    display: inline;
  }
}
.ant-table-cell:not(.ant-table-selection-column) {
  min-width: 100px;
  white-space: nowrap;
}
.ant-table-wrapper {
  overflow: auto;
}
.table-pagination {
  margin-top: 24px;
  ul {
    float: right;
  }
}

.ant-descriptions-item-label {
  font-weight: 500;
  text-align: right;
  width: 200px;
}

.ant-form-item-label {
  font-weight: 500;
}

.row-clickable {
  cursor: pointer;
}

.ant-table-tbody > tr.row-clickable:hover > td {
  background: #e6f7ff;
  border-color: rgba(0, 0, 0, 0.03);
}

.ant-descriptions-header {
  margin-top: 20px;
  .ant-descriptions-title {
    font-weight: 500;
  }
}

.row-dragging {
  background: #fafafa;
  border: 1px solid #ccc;
  z-index: 99999;
}

.row-dragging td {
  padding: 16px;
  visibility: hidden;
}

.row-dragging .drag-visible {
  visibility: visible;
}

